package app.Users;

public class Receptionist extends User {
    public Receptionist(String username, String password) {
        super(username, password);
    }
}
