@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Administrator {
  -username
  -password
}

class Receptionist {
  -username
  -password
}

class CenterCoordinator {
  -username
  -password
}

class Nurse {
  -username
  -password
}

class Employee {
  -username
  -password
}


Company "1"---"*" Administrator : knows >
Administrator "1"--"*" Receptionist : registers >
Administrator "1"--"*" CenterCoordinator : registers >
Administrator "1"--"*" Nurse : registers >
Receptionist "1"--"1" Employee : is a >
CenterCoordinator "1"--"1" Employee : is a >
Nurse "1"--"1" Employee : is a >
Administrator "1"--"*" Employee : gets list of >






@enduml